# f1_predictor

./: .env  app.py  f1_model_ready.csv  pyproject.toml  requirements.txt
artifacts/: f1_decisiontree_model.pkl  f1_logistic_model.pkl  f1_xgboost_model.pkl
