[project]
name = "f1-racing-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastf1>=3.0.2",
    "joblib>=1.5.3",
    "numpy<2.0",
    "pandas<3.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
    "xgboost>=3.2.0",
]
